# CAOS_FrothSeg

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  README.md  STRUCTURE.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
app/: README.md  __init__.py
data/: README.md
data-pipeline/: README.md  requirements.txt
data-pipeline/fslab/: __init__.py  live.py  pipeline.py  registry.py
data-pipeline/fslab/cases/: froth_cases.py
data-pipeline/fslab/core/: gate.py  manifest.py  rng.py  trace.py
data-pipeline/fslab/io/: contract.py  formats.py  froth_io.py  schema.py
data-pipeline/fslab/model/: __init__.py
data-pipeline/fslab/science/: froth_gen.py  segment.py
data-pipeline/fslab/stages/: __init__.py  benchmark.py  export.py  generate.py  ingest.py
data/derived/: sam_benchmark.json
data/derived/manifests/: CTRL_degenerate.json  EX01_subcritical.json  EX02_epidemic.json  EX03_fast_burn.json  EX04_slow_spread.json  bursting.json  coarse-froth.json  defocus.json  edge-framing.json  empty-control.json  fine-froth.json  glare-storm.json  high-load.json  index.json  low-light-noise.json  mono-clean.json  motion-fast.json  poly-normal.json  watery.json
deploy/: README.md  domain.nginx  fasl-slug.service  pages.md
docs/: README.md  architecture.md  cases.md  frameworks.md  guides.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_live-lane-pyodide.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md
docs/cases/: 01_coverage.md  README.md
docs/frameworks/: 00_TEMPLATE.md
docs/frameworks/01_transformers-js/: transformers-js.md
docs/frameworks/02_sam-method/: sam-method.md
docs/frameworks/03_scikit-image/: scikit-image.md
docs/frameworks/04_scipy/: scipy.md
docs/frameworks/05_opencv/: opencv.md
docs/frameworks/06_pycocotools/: pycocotools.md
docs/guides/: 00_instantiate.md  01_precompute-pipeline.md  02_bring-your-own-data.md  03_gpu-lane.md  03_verify-sam.md  04_run-the-api.md  05_architecture-modal.md
docs/methods/: classical.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: CNAME
frontend/scripts/: verify_sam.ts
frontend/src/: architecture.ts  frothseg.css  main.tsx
frontend/src/api/: artifacts.ts
frontend/src/classical/: classical.test.ts  gray.ts  methods.ts  watershed.ts
frontend/src/data/: citations.ts
frontend/src/lib/: contract.types.ts  imageGate.ts  imageLoad.ts  rle.ts
frontend/src/pages/: Benchmark.tsx  Experiments.tsx  Implementation.tsx  Introduction.tsx  (+2 more)
scripts/: README.md  bake_sam_benchmark.py  check_artifacts.py  dev.sh  precompute.ps1  precompute.sh  score_sam.py
tests/: conftest.py  test_contract.py  test_froth_science.py  test_manifest.py  test_pipeline_smoke.py
(+64 files in other folders)
