# FrothSeg — the offline engine package (fslab, ADR-0057 product-repo archetype).
# The EXAMPLE engine is numpy-only on purpose (an instantly-installable, no-hang reference); a real product pins
# its research-chosen SOTA engines in data-pipeline/requirements.txt and documents them in docs/frameworks/.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fslab"
# PEP 440 form of the display version X.XX.XXX (see CHANGELOG.md + fslab.__version__).
version = "0.1.0"
description = "FrothSeg — in-browser flotation-froth bubble segmentation (watershed + distilled mask head) producing the bubble-size distribution, with a synthetic-froth benchmark (ADR-0002 live CV + ADR-0054 artifact discipline)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibáñez-Leal" }]
dependencies = ["numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["data-pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# S/I/R are the standard SIR compartment names; single-letter here is intentional domain notation, not ambiguous.
ignore = ["E741"]
