# FrothSeg — the offline engine package (fslab, ADR-0057 product-repo archetype).
# The EXAMPLE engine is numpy-only on purpose (an instantly-installable, no-hang reference); a real product pins
# its research-chosen SOTA engines in data-pipeline/requirements.txt and documents them in docs/frameworks/.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fslab"
# PEP 440 form of the display version X.XX.XXX (see CHANGELOG.md + fslab.__version__).
version = "0.2.0"
description = "FrothSeg — in-browser flotation-froth bubble segmentation (watershed + distilled mask head) producing the bubble-size distribution, with a synthetic-froth benchmark (ADR-0002 live CV + ADR-0054 artifact discipline)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibáñez-Leal" }]
dependencies = ["numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["data-pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # pycocotools mask.decode uses the legacy numpy __array__ signature; harmless under numpy 2, only in the
    # CONTRACT-2 mask round-trip check. Not our code to fix.
    "ignore:__array__ implementation doesn't accept a copy keyword:DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# single-letter names are intentional CV notation here (h,w image dims; d diameters; k a kernel), not ambiguous.
ignore = ["E741"]
